<resources>
    <string name="app_name">ClientOfApp</string>
    <string name="loginTxt">Логин:</string>
    <string name="passwordTxt">Пароль:</string>
    <string name="confirmPasswordTxt">Подтверждение пароля:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_string">Welcome</string>
    <string name="text">Please sign in or sing up</string>
    <string name="signIn_message">Please write your login and password</string>
    <string name="signUp_message1">Registration - part 1</string>
    <string name="signUp_message2">Registration - part 2</string>
    <string name="signUp_message3">Now you can bind a card to your account</string>
    <string name="nameTxt">Name:</string>
    <string name="surnameTxt">Surname:</string>
    <string name="EmailTxt">Email:</string>
    <string name="AgeTxt">Age:</string>
    <string name="bag">bag</string>
    <string name="title_activity_shtorka">Shtorka</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">Make Order</string>
    <string name="food">Food</string>
    <string name="souvenirs">Souvenirs</string>
    <string name="telephoneTxt">Telephone number:</string>
    <string name="next">NEXT</string>
    <string name="add_card">ADD CARD</string>
    <string name="ccvTxt">CCV code:</string>
    <string name="skip">SKIP</string>
    <string name="sport_replay">Sport replay</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
    <string name="additional">Additional</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="view_order">View order</string>
    <string name="hotdogTV">HOT DOG \n\n 250rub</string>
    <string name="burgerTV">BURGER \n\n 250rub</string>
    <string name="hotcornTV">HOTCORN \n\n 150rub</string>
    <string name="chipsTV">CHIPS \n\n 100rub</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="send">send</string>
    <string name="recovery">Enter your email</string>
    <string name="teaTV">TEA \n\n 150rub</string>
    <string name="coffeeTV">COFFEE \n\n 150rub</string>
    <string name="waterTV">WATER \n\n 100rub</string>
    <string name="juiceTV">JUICE \n\n 150rub</string>
    <string name="ballTV">BALL \n\n 500rub</string>
    <string name="magnetTV">MAGNET \n\n 150rub</string>
    <string name="tshirtTV">T-SHIRT \n\n 500rub</string>
    <string name="flagTV">FLAG \n\n 150rub</string>
    <string name="helpfr">Help \n\n\nIn the tabs, you can select the desired category.\n
                            In each category there are products that you can purchase.\n
                            To see what you have already chosen you can in the bag.</string>
    <string name="payment">If you already filled in the card data, click "pay" otherwise fill in the card details and click "pay"</string>
    <string name="pay">PAY</string>
    <string name="profile">Профиль</string>
    <string name="my_order">Мой заказ</string>
    <string name="payment_methods">Способы оплаты</string>
    <string name="exit">Выход</string>

</resources>
