<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:background="@color/colorBackground">

    <TextView
        android:id="@+id/registration_part3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_message3"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/card"
        android:layout_below="@+id/registration_part3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/numberOfCard"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp"
        android:textColor="#000000"
        android:inputType="number"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="140dp"/>

    <EditText
        android:id="@+id/monthOfCard"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp"
        android:textColor="#000000"
        android:inputType="number"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/yearOfCard"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp"
        android:textColor="#000000"
        android:inputType="number"
        android:layout_alignBaseline="@+id/monthOfCard"
        android:layout_alignBottom="@+id/monthOfCard"
        android:layout_toRightOf="@+id/monthOfCard"
        android:layout_toEndOf="@+id/monthOfCard"/>

    <EditText
        android:id="@+id/holderCard"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/yearOfCard"
        android:layout_alignRight="@+id/skip"
        android:layout_alignEnd="@+id/skip"
        android:layout_toRightOf="@+id/ccvTv"
        android:layout_toEndOf="@+id/ccvTv"/>

    <TextView
        android:id="@+id/ccvTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/ccvTxt"
        android:layout_alignBottom="@+id/imageView3"/>

    <EditText
        android:id="@+id/ccvTxt"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:textColor="#000000"
        android:inputType="number"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignBaseline="@+id/ccvTv"
        android:layout_alignBottom="@+id/ccvTv"
        android:layout_toRightOf="@+id/ccvTv"
        android:layout_toEndOf="@+id/ccvTv"/>

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/skip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_alignRight="@+id/registration_part3"
        android:layout_alignEnd="@+id/registration_part3"
        android:layout_alignLeft="@+id/registration_part3"
        android:layout_alignStart="@+id/registration_part3"/>

    <Button
        android:id="@+id/addCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/add_card"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignRight="@+id/registration_part3"
        android:layout_alignEnd="@+id/registration_part3"
        android:layout_alignLeft="@+id/registration_part3"
        android:layout_alignStart="@+id/registration_part3"/>

</RelativeLayout>